basalt/src/markdown/snapshots/basalt_tui__markdown__view__tests__render_markdown_view-3.snap
---
source: basalt/src/markdown/view.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ Callout Blocks                                                               █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│ ┃ You can turn your quote into a callout by adding [!info] as the first line █"
"│ ┃ in a quote.                                                                █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
