basalt/src/markdown/snapshots/basalt_tui__markdown__view__tests__render_markdown_view-4.snap
---
source: basalt/src/markdown/view.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ Deep Quotes                                                                  █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│ You can have deeper levels of quotes by adding a > symbols before the text   █"
"│ inside the block quote.                                                      █"
"│                                                                              █"
"│ ┃ Regular thoughts                                                           █"
"│ ┃                                                                            █"
"│ ┃ ┃ Deeper thoughts                                                          █"
"│ ┃ ┃                                                                          █"
"│ ┃ ┃ ┃ Very deep thoughts                                                     █"
"│ ┃ ┃ ┃                                                                        █"
"│ ┃ ┃ ┃ - Someone on the internet 1996                                         ║"
"│ ┃                                                                            ║"
"│ ┃ Back to regular thoughts                                                   ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
