basalt/src/markdown/snapshots/basalt_tui__markdown__view__tests__render_markdown_view-5.snap
---
source: basalt/src/markdown/view.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ Lists                                                                        █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│ You can create an unordered list by adding a -, *, or + before the text.     █"
"│                                                                              █"
"│ - First list item                                                            █"
"│ - Second list item                                                           █"
"│ - Third list item                                                            █"
"│                                                                              █"
"│ To create an ordered list, start each line with a number followed by a .     █"
"│ symbol.                                                                      █"
"│                                                                              █"
"│ 1. First list item                                                           ║"
"│ 2. Second list item                                                          ║"
"│ 3. Third list item                                                           ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
