basalt/src/markdown/snapshots/basalt_tui__markdown__view__tests__render_markdown_view-6.snap
---
source: basalt/src/markdown/view.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ Indented Lists                                                               █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│ Lists can be indented                                                        █"
"│                                                                              █"
"│ - First list item                                                            █"
"│   - Second list item                                                         █"
"│     - Third list item                                                        █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
