basalt/src/markdown/snapshots/basalt_tui__markdown__view__tests__render_markdown_view-7.snap
---
source: basalt/src/markdown/view.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ Task lists                                                                   █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│ To create a task list, start each list item with a hyphen and space followed █"
"│ by [ ].                                                                      █"
"│                                                                              █"
"│ ■ This is a completed task.                                                  █"
"│ □ This is an incomplete task.                                                █"
"│                                                                              █"
"│ ┃ You can use any character inside the brackets to mark it as complete.      █"
"│                                                                              █"
"│ ■ Oats                                                                       █"
"│ ■ Flour                                                                      ║"
"│ ■ Apples                                                                     ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
