basalt/src/markdown/snapshots/basalt_tui__markdown__view__tests__render_markdown_view-8.snap
---
source: basalt/src/markdown/view.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ Code blocks                                                                  █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│ To format a block of code, surround the code with triple backticks.          █"
"│                                                                              █"
"│                                                                              █"
"│  cd ~/Desktop                                                                █"
"│                                                                              █"
"│                                                                              █"
"│ You can also create a code block by indenting the text using Tab or 4 blank  █"
"│ spaces.                                                                      █"
"│                                                                              █"
"│                                                                              ║"
"│  cd ~/Desktop                                                                ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
