basalt/src/markdown/snapshots/basalt_tui__markdown__view__tests__render_markdown_view-9.snap
---
source: basalt/src/markdown/view.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ Code blocks                                                                  █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│ You can add syntax highlighting to a code block, by adding a language code   █"
"│ after the first set of backticks.                                            █"
"│                                                                              █"
"│                                                                              █"
"│  function fancyAlert(arg) {                                                  █"
"│    if(arg) {                                                                 █"
"│      $.facebox({div:'#foo'})                                                 █"
"│    }                                                                         █"
"│  }                                                                           █"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
