basalt/src/markdown/snapshots/basalt_tui__markdown__view__tests__render_markdown_view.snap
---
source: basalt/src/markdown/view.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────▲"
"│ Headings                                                                     █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│                                                                              █"
"│ THIS IS A HEADING 1                                                          █"
"│ ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀ █"
"│                                                                              █"
"│ This is a heading 2                                                          █"
"│ ════════════════════════════════════════════════════════════════════════════ █"
"│ ⬤  This is a heading 3                                                       █"
"│                                                                              █"
"│ ● This is a heading 4                                                        ║"
"│                                                                              ║"
"│ ◆ 𝓣𝓱𝓲𝓼 𝓲𝓼 𝓪 𝓱𝓮𝓪𝓭𝓲𝓷𝓰 𝟓                                                        ║"
"│                                                                              ║"
"│ ✺ 𝓣𝓱𝓲𝓼 𝓲𝓼 𝓪 𝓱𝓮𝓪𝓭𝓲𝓷𝓰 𝟔                                                        ║"
"│                                                                              ║"
"│                                                                              ║"
"│                                                                              ║"
"╰──────────────────────────────────────────────────────────────────────────────▼"
